resolved gap error between markovfills

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
   margin: 0;
   top: 0;
   left: 0;
+  z-index: -1;
 }
 
 .item{
@@ -140,6 +141,10 @@ body{
   animation-name: appear;
   animation-duration: 0.05s;
   animation-fill-mode: both;
+}
+
+#intro{
+  z-index: 2;
 }
 
 @media only screen and (min-width: 600px) {
